# pwfilter

./: .gitignore  LICENSE  README.md  pyproject.toml
pwfilter/: cli.py  core.py  presets.py
tests/: dict.txt  password.list  test_pwfilter.py
